--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,6 @@
 cmake_minimum_required(VERSION 3.24)
 
-option(FULL_RELEASE "Finalizes the build, compressing everything into a BSA." OFF)
-option(OUTDATED "Applies 1.5.97 offsets/IDs." OFF)
-option(BUILD_ARTIFACTS "Turned off during Github actions to get them to stop failing." ON)
-option(COPY_BSA "Copies any generated BSA to the MO2 directory (if specified)." ON)
-option(COPY_PEX "Copies any generated scripts to the MO2 directory (if specified). Applies after the BSA (if enabled)." OFF)
-option(COPY_PSC "Copies any script sources to the MO2 directory (if specified). Applies after the BSA (if enabled)." ON)
+option(OUTDATED "Applies 1.5.97 offsets/IDs." ON)
 
 # -------- Project ----------
 project(
@@ -66,99 +61,3 @@ set_target_properties(CommonLibSSE PROPERTIES
 set(DATA_DIR "${PROJECT_SOURCE_DIR}/data")
 
 include(components.cmake)
-
-# ---- Post build ----
-if(DEFINED ENV{SKYRIM_MODS_FOLDER} AND IS_DIRECTORY "$ENV{SKYRIM_MODS_FOLDER}")
-	if(OUTDATED)
-		set(OUTPUT_FOLDER "$ENV{SKYRIM_MODS_FOLDER}/${PROJECT_NAME} - Outdated")
-	elseif (FULL_RELEASE)
-		set(OUTPUT_FOLDER "$ENV{SKYRIM_MODS_FOLDER}/${PROJECT_NAME} - Full Release")
-	else()
-		set(OUTPUT_FOLDER "$ENV{SKYRIM_MODS_FOLDER}/${PROJECT_NAME} - Test")
-	endif()
-endif()
-
-# ---- Compile Papyrus Scripts and Pack Into Archive ----
-include(Papyrus)
-include(BSArchive)
-
-if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/Data/Source/Scripts" AND BUILD_ARTIFACTS)
-	file(GLOB ${PROJECT_NAME}_SOURCES
-		LIST_DIRECTORIES false
-		CONFIGURE_DEPENDS
-		"Data/Source/Scripts/*.psc"
-	)
-
-	Papyrus_Add(
-		"Papyrus"
-		GAME ${Skyrim64Path}
-		IMPORTS ${CMAKE_CURRENT_SOURCE_DIR}/Data/Source/Scripts
-		SOURCES ${${PROJECT_NAME}_SOURCES}
-		OPTIMIZE ANONYMIZE
-	)
-
-	BSArchive_Add(
-		"BSA"
-		OUTPUT "${PROJECT_NAME}.bsa"
-		FORMAT SSE
-		FILES ${Papyrus_OUTPUT}
-	)
-else()
-	message(STATUS "No scripts to compile found, won't compress into BSA.")
-endif()
-
-# ---- Automatically copy artifacts to MO2 ----
-if(DEFINED OUTPUT_FOLDER AND BUILD_ARTIFACTS)
-    set(DLL_FOLDER "${OUTPUT_FOLDER}/SKSE/Plugins")
-
-    add_custom_command(
-        TARGET "${PROJECT_NAME}"
-        POST_BUILD
-        COMMAND "${CMAKE_COMMAND}" -E copy_if_different "$<TARGET_FILE:${PROJECT_NAME}>" "${DLL_FOLDER}/$<TARGET_FILE_NAME:${PROJECT_NAME}>"
-        COMMAND "${CMAKE_COMMAND}" -E copy_if_different "$<TARGET_PDB_FILE:${PROJECT_NAME}>" "${DLL_FOLDER}/$<TARGET_PDB_FILE_NAME:${PROJECT_NAME}>"
-
-		COMMAND "${CMAKE_COMMAND}"
-			-DSRC_DIR="${PROJECT_SOURCE_DIR}/Data"
-			-DDST_DIR="${OUTPUT_FOLDER}"
-			-DPROJECT_NAME="${PROJECT_NAME}"
-			-P "${PROJECT_SOURCE_DIR}/CMake/Scripts/CMake-Copy-Artifacts.cmake"
-    )
-
-    if(COPY_BSA)
-		add_custom_command(
-			TARGET "${PROJECT_NAME}"
-			POST_BUILD
-			COMMAND "${CMAKE_COMMAND}"
-				-DSRC_DIR="${PROJECT_SOURCE_DIR}/Data"
-				-DDST_DIR=${OUTPUT_FOLDER}
-				-DPROJECT_NAME=${PROJECT_NAME}
-				-DBINARY_DIR=${CMAKE_BINARY_DIR}
-				-P "${PROJECT_SOURCE_DIR}/CMake/Scripts/CMake-Copy-Archive.cmake"
-			VERBATIM
-		)
-	endif()
-
-    if(COPY_PEX)
-        add_custom_command(
-        TARGET "${PROJECT_NAME}"
-        POST_BUILD
-        COMMAND "${CMAKE_COMMAND}"
-            -DCOMPILED_SCRIPTS="${CMAKE_BINARY_DIR}/Scripts"
-            -DOUTPUT_FOLDER="${OUTPUT_FOLDER}"
-            -P "${PROJECT_SOURCE_DIR}/CMake/Scripts/CMake-Copy-Scripts.cmake"
-        VERBATIM
-		)
-    endif()
-
-	if(COPY_PSC)
-        add_custom_command(
-        TARGET "${PROJECT_NAME}"
-        POST_BUILD
-        COMMAND "${CMAKE_COMMAND}"
-            -DSOURCE_SCRIPTS="${PROJECT_SOURCE_DIR}/Data/Source/Scripts"
-            -DOUTPUT_FOLDER="${OUTPUT_FOLDER}"
-            -P "${PROJECT_SOURCE_DIR}/CMake/Scripts/CMake-Copy-Sources.cmake"
-        VERBATIM
-		)
-    endif()
-endif()
